--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header.main-header{
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  padding: 10px 25px;
+  box-shadow: 1px 5px 15px rgba(0, 0, 0, 0.096);
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  box-sizing: border-box;
 }
 
-.App-link {
-  color: #61dafb;
+ul.navbar{
+  display: flex;
+  list-style: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul.navbar li{
+  margin-right: 15px;
+}
+
+.container-logo{
+  width: 80px;
+}
+
+.container-logo img{
+  width: 100%
 }
