--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,15 @@ ul.navbar li{
 .container-logo img{
   width: 100%
 }
+
+.card-item{
+  float: left;
+  border: 1px solid #ababab ;
+  width: 250px;
+  margin: 20px 0px 0px 20px;
+  box-shadow: 1px 1px 5px #0000002b ;
+  border-radius: 5px;
+  padding: 10px;
+  text-align: center;
+
+}
